--- a/deployment/pages-config.yaml
+++ b/deployment/pages-config.yaml
@@ -3,6 +3,5 @@ data:
   PAGE_CONTENT: Green-Pages coming from Yellow-World!
 kind: ConfigMap
 metadata:
-  creationTimestamp: null
-  name: pages-conf
+  name: angel
   namespace: angel
